syntax ="proto3";

package go.micro.srv.bet;

option go_package="/Bet";
service BetService {
rpc MakeBet(BetWithToken) returns (Response) {}
rpc RemoveBet(IdWithToken) returns (Response) {}
rpc GetAll(Empty) returns (Response) {}
rpc GetMyBets(IdWithToken) returns (Response) {}
}
message Bet{
int32 competitionId=1;
int32 userId=2;
string result=3;
int32 money=4;
}
message IdWithToken {
int32 cId=1;
int32 uId=3;
string token=2;
}
message Response {
string response=1;
}
message Empty{
string token=1;
}
message BetWithToken {
Bet bet=1;
string token=2;
}